--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -1,4 +1,4 @@
 set(APP_NAME "Main")
 file(GLOB src_files "*.cpp")
 add_executable(${APP_NAME} ${src_files})
-target_link_libraries(${APP_NAME} PRIVATE Crow::Crow ZLIB::ZLIB Poco::JSON)
+target_link_libraries(${APP_NAME} PRIVATE  nlohmann_json httplib::httplib)
